# parcelpy

./: .gitignore  CHANGELOG.md  DATABASE_ORGANIZATION.md  DATABASE_ORGANIZATION_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  INTEGRATION_README.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  NEXT_STEPS_ACTION_PLAN.md  QUICK_START_NC_DATA.md  README.md  REFACTORING.md  SCRIPTS_INTEGRATION_PLAN.md  SCRIPTS_INTEGRATION_STATUS.md  TESTING_GUIDE.md  USAGE.md  VISUALIZATION_FIXES.md  address_lookup.py  check_current_tables.py  check_db_state.py  check_dependencies.py  debug_block_groups.py  debug_census_coords.py  demo_integration.py  dev_test_database_results.json  github_issue_template.md  parcelpy_db_cli.py  pyproject.toml  requirements.txt  run_streamlit.py  run_tests.sh  schema.json  setup.py  setup_commands.sh  split_geoparquet_by_county.py  split_geoparquet_modern.py  test_bbox_functionality.py  test_census_enrichment.py  test_database_creation_results.json  (+4 more)
.cursor/rules/: earth-engine-server.mdc  explain-solutions.mdc
.github/workflows/: ci.yml
.streamlit/: secrets.toml
config/: __init__.py  base_config.yaml  county_config.yaml  crs_config.yaml  ee_config.yaml  lcms_config.yaml  parcel_config.yaml  state_boundaries_config.yaml  urban_sprawl_config.yaml  verification_config.yaml
database/: README.md  cli.py  requirements.txt
database/core/: database_manager.py  spatial_queries.py
database/examples/: basic_usage.py
database/utils/: schema_manager.py
docs/: DEVELOPMENT.md  NC_COUNTY_DATA_SETUP.md  TESTING_GUIDE.md  gee_setup.md  land_area_verification.md  lcms_metadata.md  lcms_metadata_1.md  lcms_metadata_2.md  parcel_metadata.md  parcel_tracking_plan.md  scaling_strategy.md  urban_sprawl_analysis.md
docs/viz_examples/: sankey_example.py  test_sankey.py
earthengine/: ee_process_counties.py
earthengine/gee_examples/: reduce_regions_example.py
earthengine/partition/: temp_utils.py
earthengine/preprocess/archive/: clay.yaml  registries.py
earthengine/preprocess/src/: config.py
examples/: county_data.json
parcelpy/: __init__.py
parcelpy/analytics/: __init__.py  address_lookup.py  cli.py
parcelpy/database/: __init__.py  cli.py  cli_analytics.py  cli_census.py  config.py  crs_manager.py  cursor_duckdb_database_development_assi.md  debug_table_creation.py
parcelpy/database/core/: __init__.py  census_integration.py  risk_analytics.py
parcelpy/database/examples/: analytics_demo.py  basic_usage.py  standalone_demo.py
parcelpy/database/loaders/: __init__.py  county_loader.py
parcelpy/database/schema/: __init__.py  normalized_schema.py  validator.py
parcelpy/database/utils/: data_ingestion.py
parcelpy/earthengine/: EE_README.md
parcelpy/earthengine/gee_examples/: reduce_region_example.py
parcelpy/earthengine/partition/: convert_gdb_to_geoparquet.py  crs_manager.py  extract_county_data.py  processing_manager.py
parcelpy/earthengine/preprocess/: README.md
parcelpy/streamlit/: app.py  requirements.txt
parcelpy/streamlit/components/: data_components.py  database_components.py  map_components.py  visualization_components.py
parcelpy/streamlit/utils/: helpers.py
parcelpy/streamlit_app/: app.py
parcelpy/streamlit_app/components/: __init__.py  data_components.py  database_components.py  (+2 more)
parcelpy/viz/: .gitignore
partition/: README.md
partition/tests/: __init__.py  test_geometry_engine.py  test_overlap_metrics.py
preprocess/archive/: fields.yaml  pid_schemas.py  refactoring_plan.md
scripts/: README_batch_loading.md  analyze_batch_performance.py  analyze_land_use_changes_prod.py  analyze_nc_data.py  backup_database.py  batch_load_counties.py  check_census_data.py  check_database_tables.py  check_loaded_data.py  check_original_geojson.py  check_parcel_crs.py  check_processed_data.py  convert_parquet_to_geojson.py  create_dev_test_databases.py  create_test_databases.py  create_test_db.py  debug_crs_transformations.py  drop_county_tables.py  ingest_nc_parcels.py  list_tables.py  load_all_counties.py  load_geojson_county.py  load_nc_county_data.py  load_single_county.py  load_single_county_simple.py  merge_lcms_outputs_prod.py  migrate_databases.py  migrate_to_normalized_schema.py  monitor_nash_progress.py  parcel_socialmapper_integration.py  populate_centroids.py  prepare_test_county.py  process_county_optimized.py  process_county_parcels.py  process_county_parcels_prod.py  process_nash_parallel_improved.py  query_nc_data_examples.py  run_tests.py  setup_normalized_schema.py  statewide_analysis_examples.py  (+7 more)
scripts/archive/: create_subset.py  prepare_test_parcels.py  track_parcel_landuse.py
scripts/development/: analyze_land_use_changes.py  calculate_state_land_use.py  lcms_state_landuse_trend.py  merge_lcms_outputs.py  prepare_test_county.py  process_county_parcels.py
src/: __init__.py  analyze_land_use.py  config.py
src/core/: data_loader.py  geometry_preprocessor.py  lcms_processor.py  results_analyzer.py
src/data/: merge_gee_outputs.py
src/database/: CENSUS_INTEGRATION.md  DB_README.md
src/earthengine/: requirements.txt
src/streamlit/: app.py
src/utils/: crs_manager.py  ee_helpers.py  geo_utils.py
src/verification/: area_verifier.py  cross_county.py
src/visualization/: __init__.py  area_comparison.py  choropleth.py  generate_all.py  matrix_plot.py  plot_sankey.py  prepare_sankey_data.py  report.py  sankey.py  stacked_bar.py
src/viz/: requirements.txt
streamlit_app/components/: __init__.py  database_components.py
streamlit_app/utils/: config.py  session_state.py
tests/: __init__.py  conftest.py  create_test_sample.py  run_area_test.sh  test_area_calculations.py  test_integration.py  test_land_use_analysis.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  demo_integration.py  test_integration.py
tests/mocks/: __init__.py
tests/unit/: test_modern_example.py
viz/: demo_census_boundaries.py  demo_parcel_viz.py  quick_census_test.py
viz/src/: __init__.py  __main__.py  data_loader.py  database_integration.py  enhanced_parcel_visualizer.py  integrated_cli.py  parcel_visualizer.py
(+139 files in other folders)
